--- a/client/src/App.css
+++ b/client/src/App.css
@@ -35,3 +35,9 @@
   top: 40%;
   margin: 0 auto;
 }
+
+/* adding different tailwind classes */
+.form-input {
+  @apply mt-1 block w-full py-2 px-3 border border-gray-200 bg-white rounded-md 
+  focus: outline-none focus:ring-indigo-500 sm:text-sm;
+}
