--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,7 +37,6 @@
 }
 
 /* adding different tailwind classes */
-.form-input {
-  @apply mt-1 block w-full py-2 px-3 border border-gray-200 bg-white rounded-md 
-  focus: outline-none focus:ring-indigo-500 sm:text-sm;
+.form-input{
+  @apply mt-1 block w-full py-2 px-3 border border-gray-200 bg-white rounded-md focus:outline-none focus:ring-indigo-500 sm:text-sm;
 }
